--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ you just type <code>citare</code>.</p>
 </li>
 </ul>
 <p>Contains <a href="http://druide.github.com/citare-scriptum/lib/utils/brief.html">brief</a> function specification highlight (works with github flavored markdown):</p>
-<pre><code><span class="brief"><span class="title">functionName</span>(<span class="attribute">Type </span>argument1, <span class="attribute">Type1/Type2 </span>argument2, <span class="optional"><span class="attribute">Type </span>optionalArgument1?</span>): <span class="attribute">Type</span></span></code></pre>
+<pre><code><span class="brief"><span class="title">functionName</span>(<span class="attribute">Type </span>argument1, <span class="attribute">Type1/Type2 </span>argument2, <span class="optional"><span class="attribute">Type </span>optionalArgument1?)</span>: <span class="attribute">Type</span></span></code></pre>
 <h2><a name="how" class="anchor" href="#how"><span></span></a>How?</h2>
 <h3><a name="installing-citare" class="anchor" href="#installing-citare"><span></span></a>Installing citare</h3>
 <p>Citare depends on <a href="http://nodejs.org/">Node.js</a>. Once you have this installed - and assuming that
